@@ -8,6 +8,8 @@ Version 4.1.3:
  * Fix: use local IP for router-id when the peer is auto-deteted (and not the remote IP)
  * Fix: potential python3/python2 bytes vs string issues when generating updates
  * Fix: label is mandatory when using RD, force it, and perform better checks on the configuration
+ * Fix: sending route-refresh message via the API was broken
+   reported by: Konrad Zemek
  * CHANGE: large change to the configuration code (should not have any effect but the devil is in the details)
 
 Version 4.1.2
